--- a/index.html
+++ b/index.html
@@ -59,28 +59,25 @@
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                     <li><a class="smoothscroll"  href="#services" title="services">Services</a></li>
-                    <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
-                    <li><a class="smoothscroll"  href="#clients" title="clients">Clients</a></li>
+                    <li><a class="smoothscroll"  href="#works" title="works">Products</a></li>
+                    <li><a class="smoothscroll"  href="#clients" title="clients">Our Team</a></li>
                     <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
                 </ul>
     
-                <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
+                <p>Paramartha Agro is a company engaged in the export trade of agro products in the best coconut and coffee derivatives from Indonesia which have international quality.</p>
     
                 <ul class="header-nav__social">
                     <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="https://instagram.com/rizalfahmind/" target="_blank"><i class="fa fa-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-envelope"></i></a>
                     </li>
                 </ul>
 
@@ -110,11 +107,10 @@
                 <h3>Welcome to Paramartha Agro</h3>
 
                 <h1>
-                    We are a company <br>
-                    enganged in export trade <br>
-                    of the best agro products <br>
-                    from Indonesia which have <br>
-                    international quality
+                    We provide the best <br>
+                    coconut and coffee derivatives <br>
+                    commodities from Indonesia <br> 
+                    with International quality. <br>
                 </h1>
 
                 <div class="home-content__buttons">
