--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <a href="https://instagram.com/rizalfahmind/" target="_blank"><i class="fa fa-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://linkedin.com/mrfcreative" target="_blank"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-envelope"></i></a>
