--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 
                 <div class="home-content__buttons">
                     <a href="#contact" class="smoothscroll btn btn--stroke">
-                        Start a Project
+                        Products
                     </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
-                        More About Us
+                        Contact Us
                     </a>
                 </div>
 
@@ -137,19 +137,16 @@
 
         <ul class="home-social">
             <li>
-                <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
+                <a href="https://instagram.com/rizalfahmind" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://linkedin.com/mrfcreative" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-behance" aria-hidden="true"></i><span>Behance</span></a>
-            </li>
-            <li>
-                <a href="#0"><i class="fa fa-dribbble" aria-hidden="true"></i><span>Dribbble</span></a>
+                <a href="https://facebook.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i><span>Gmail</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -164,14 +161,15 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--dark">Hello There</h3>
-                <h1 class="display-1 display-1--light">We Are Glint</h1>
+                <h1 class="display-1 display-1--light">We Are Para-Teams</h1>
             </div>
         </div> <!-- end section-header -->
 
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt. 
+                    We are a company engaged in the export trade. We provide superior products from coconut derivatives and the best coffee commodities in Indonesia. Our company serves both domestic and international trade or export demand. <br>
+                    The products we offer have quality with proven certificates from international standard testing laboratories so that our products have the best quality.
                 </p>
             </div>
         </div> <!-- end about-desc -->
@@ -179,16 +177,8 @@
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
                 
             <div class="col-block stats__col ">
-                <div class="stats__count">127</div>
-                <h5>Awards Received</h5>
-            </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">1505</div>
-                <h5>Cups of Coffee</h5>
-            </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">109</div>
-                <h5>Projects Completed</h5>
+                <div class="stats__count">18800</div>
+                <h5>Product Capacities</h5>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">102</div>
