--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="row">
                             <div class="col-xl-8 col-lg-9 col-md-11 col-sm-10">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay="0.2s">welcome to Paramartha Agro</span>
+                                    <span data-animation="fadeInUp" data-delay="0.2s">Paramartha Agro</span>
                                     <h1 data-animation="fadeInUp" data-delay="0.8s">Our products have international certified quality.</h1>
                                 </div>
                             </div>
