--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                         <div class="row">
                             <div class="col-xl-8 col-lg-9 col-md-11 col-sm-10">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay="0.2s">Paramartha Agro</span>
-                                    <h1 data-animation="fadeInUp" data-delay="0.8s">Our products have international certified quality.</h1>
+                                    <span data-animation="fadeInUp" data-delay="0.2s">Welcome to</span>
+                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Paramartha Agro</h1>
                                 </div>
                             </div>
                         </div>
@@ -107,8 +107,8 @@
                         <div class="row">
                             <div class="col-xl-8 col-lg-9 col-md-11 col-sm-10">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay="0.2s">welcome to paramartha agro</span>
-                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Our products have been exported to many countries.</h1>
+                                    <span data-animation="fadeInUp" data-delay="0.2s">Paramartha Agro</span>
+                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Our products are of international quality.</h1>
                                 </div>
                             </div>
                         </div>
