--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Sedgwick+Ave&display=swap" rel="stylesheet">
+
     <!-- script
     ================================================== -->
     <script src="js/modernizr.js"></script>
@@ -64,8 +67,7 @@
                     <li><a class="smoothscroll" href="#contact" title="contact">Contact</a></li>
                 </ul>
 
-                <p>Paramartha Agro is a company engaged in the export trade of agro products in the best coconut and
-                    coffee derivatives from Indonesia which have international quality.</p>
+                <p>Paramartha Agro is a company engaged in the export trade of coconut briquette charcoal from Indonesia which is certified and has international quality.</p>
 
                 <ul class="header-nav__social">
                     <li>
@@ -111,10 +113,12 @@
                 <h3>Welcome to Paramartha Agro</h3>
 
                 <h1>
-                    We provide the best <br>
-                    briquettes charcoal <br>
-                    coconut from Indonesia <br>
+                    We provide coconut briquettes<br>
+                    charcoal from Indonesia <br>
                     with International quality. <br>
+                </h1>
+                <h1 style="font-family: 'Satisfy', cursive; font-family: 'Sedgwick Ave', cursive; font-size: 30px;">
+                    We just not sell, We Build <span style="color: green;">Trust!</span>
                 </h1>
 
                 <div class="home-content__buttons">
@@ -169,7 +173,7 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--dark">Hello There</h3>
-                <h1 class="display-1 display-1--light">We Are Para-Teams</h1>
+                <h1 class="display-1 display-1--light">We Are ParaTeams</h1>
             </div>
         </div> <!-- end section-header -->
 
