--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <link rel="stylesheet" href="css/main.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Sedgwick+Ave&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Satisfy&family=Sedgwick+Ave&display=swap"
+        rel="stylesheet">
 
     <!-- script
     ================================================== -->
@@ -67,7 +69,8 @@
                     <li><a class="smoothscroll" href="#contact" title="contact">Contact</a></li>
                 </ul>
 
-                <p>Paramartha Agro is a company engaged in the export trade of coconut briquette charcoal from Indonesia which is certified and has international quality.</p>
+                <p>Paramartha Agro is a company engaged in the export trade of coconut briquette charcoal from Indonesia
+                    which is certified and has international quality.</p>
 
                 <ul class="header-nav__social">
                     <li>
@@ -79,7 +82,7 @@
                                 class="fa fa-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="https://linkedin.com/mrfcreative" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/company/paramartha-agro/" target="_blank"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
                         <a href="mailto:paramarthaagro@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
@@ -117,8 +120,8 @@
                     charcoal from Indonesia <br>
                     with International quality. <br>
                 </h1>
-                <h1 style="font-family: 'Satisfy', cursive; font-family: 'Sedgwick Ave', cursive; font-size: 30px;">
-                    We just not sell, We Build <span style="color: green;">Trust!</span>
+                <h1 style="font-family: 'Sedgwick Ave', cursive; font-size: 30px;">
+                    We just not sell, We Build <span style="color: #6AB950;">Trust!</span>
                 </h1>
 
                 <div class="home-content__buttons">
@@ -146,14 +149,14 @@
         <ul class="home-social">
             <li>
                 <a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-                    target="_blank"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                    target="_blank"><i class="fa fa-phone" aria-hidden="true"></i><span>Phone/Whatsapp</span></a>
             </li>
             <li>
                 <a href="https://instagram.com/paramarthagro" target="_blank"><i class="fa fa-instagram"
                         aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="https://linkedin.com/mrfcreative" target="_blank"><i class="fa fa-linkedin"
+                <a href="https://www.linkedin.com/company/paramartha-agro/" target="_blank"><i class="fa fa-linkedin"
                         aria-hidden="true"></i><span>Linkedin</span></a>
             </li>
             <li>
