--- a/index.html
+++ b/index.html
@@ -563,15 +563,12 @@
 
                     <div class="testimonials__slide">
 
-                        <p>Qui ipsam temporibus quisquam vel. Maiores eos cumque distinctio nam accusantium ipsum.
-                            Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium
-                            quos qui praesentium corpori.
-                            Excepturi nam cupiditate culpa doloremque deleniti repellat.</p>
+                        <p>this product poko'e best quality cok! i can cooking with full of the dust on my face.</p>
 
                         <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
                         <div class="testimonials__info">
-                            <span class="testimonials__name">Tim Cook</span>
-                            <span class="testimonials__pos">CEO, Apple</span>
+                            <span class="testimonials__name">Edi Guarero</span>
+                            <span class="testimonials__pos">Kang Gebuk</span>
                         </div>
 
                     </div>
@@ -624,7 +621,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Contact Us</h3>
-                <h1 class="display-2 display-2--light">Reach out for a new project or just say hello</h1>
+                <h1 class="display-2 display-2--light">Reach out for an order or just say hello</h1>
             </div>
         </div>
 
@@ -712,19 +709,20 @@
 
                     <ul class="contact-social">
                         <li>
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
+                                target="_blank"><i class="fa fa-phone" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://instagram.com/paramarthagro" target="_blank"><i class="fa fa-instagram"
+                                    aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/company/paramartha-agro/" target="_blank"><i class="fa fa-linkedin"
+                                    aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                            <a href="mailto:paramarthaagro@gmail.com" target="_blank"><i class="fa fa-envelope"
+                                    aria-hidden="true"></i></a>
                         </li>
                     </ul> <!-- end contact-social -->
 
@@ -745,18 +743,17 @@
             <div class="col-six tab-full left footer-desc">
 
                 <div class="footer-logo"></div>
-                Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien
-                massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh
-                pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Quaerat voluptas
-                autem necessitatibus vitae aut.
+                Paramartha Agro is a company engaged in the export trade of coconut briquette charcoal from Indonesia
+                which is certified and has international quality.
 
             </div>
 
             <div class="col-six tab-full right footer-subscribe">
 
                 <h4>Get Notified</h4>
-                <p>Quia quo qui sed odit. Quaerat voluptas autem necessitatibus vitae aut non alias sed quia. Ut itaque
-                    enim optio ut excepturi deserunt iusto porro.</p>
+                <p>To get other information and you can subscribe us. <br>
+                    Thanks!
+                </p>
 
                 <div class="subscribe-form">
                     <form id="mc-form" class="group" novalidate="true">
