--- a/index.html
+++ b/index.html
@@ -193,14 +193,22 @@
         </div> <!-- end about-desc -->
 
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
-
+                
             <div class="col-block stats__col ">
-                <div class="stats__count">18800</div>
-                <h5>Product Capacities</h5>
+                <div class="stats__count">127</div>
+                <h5>Awards Received</h5>
+            </div>
+            <div class="col-block stats__col">
+                <div class="stats__count">1505</div>
+                <h5>Cups of Coffee</h5>
+            </div>
+            <div class="col-block stats__col">
+                <div class="stats__count">109</div>
+                <h5>Projects Completed</h5>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">102</div>
-                <h5>Happy Clients</h5>
+                <h5>Happy Clients</h5> 
             </div>
 
         </div> <!-- end about-stats -->
