--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
-				<div class="col-lg-12 ftco-animate d-flex align-items-center"> 
+				<div class="col-lg-12 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
 						<span class="subheading">Welcome to Paramartha Agro</span>
 						<h1 class="mb-4">find your coconut charcoal briquettes <span
@@ -100,7 +100,8 @@
 							extraordinary natural beauty. Water flows from the mountains, anything and everything can be
 							planted until it becomes a very high quality seed where you can plant wood into crops. Deep
 							within is a very high quality and very attractive selling point.</p>
-						<p class="mt-3"><a href="about.html" class="btn btn-primary btn-outline-primary">Read more</a></p>
+						<p class="mt-3"><a href="about.html" class="btn btn-primary btn-outline-primary">Read more</a>
+						</p>
 					</div>
 				</div>
 				<div class="col-md text-center d-flex align-items-stretch">
@@ -173,8 +174,8 @@
 				<div class="col-md-6 text-center heading-section ftco-animate">
 					<span class="subheading">Gallery</span>
 					<h2 class="mb-4">Our gallery</h2>
-					<p>Separated they live in. A small river named Duden flows by their place and supplies it with the
-						necessary regelialia.</p>
+					<p>We present the whole process with love so as to produce quality that is of international
+						standard.</p>
 				</div>
 			</div>
 		</div>
@@ -195,23 +196,10 @@
 				</div>
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="project">
-						<img src="images/work-2.jpg" class="img-fluid" alt="Colorlib Template">
-						<div class="text">
-							<span>Beauty</span>
-							<h3><a href="project.html">Haircut</a></h3>
-						</div>
-						<a href="images/work-2.jpg"
-							class="icon image-popup d-flex justify-content-center align-items-center">
-							<span class="icon-expand"></span>
-						</a>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="project">
 						<img src="images/work-3.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
-							<span>Beauty</span>
-							<h3><a href="project.html">Hairstylist</a></h3>
+							<span>Stock</span>
+							<h3><a href="project.html">Lots</a></h3>
 						</div>
 						<a href="images/work-3.jpg"
 							class="icon image-popup d-flex justify-content-center align-items-center">
@@ -221,10 +209,23 @@
 				</div>
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="project">
+						<img src="images/work-2.jpg" class="img-fluid" alt="Colorlib Template">
+						<div class="text">
+							<span>Long</span>
+							<h3><a href="project.html">Burn</a></h3>
+						</div>
+						<a href="images/work-2.jpg"
+							class="icon image-popup d-flex justify-content-center align-items-center">
+							<span class="icon-expand"></span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="project">
 						<img src="images/work-4.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
-							<span>Beauty</span>
-							<h3><a href="project.html">Haircut</a></h3>
+							<span>Custom</span>
+							<h3><a href="project.html">Packaging</a></h3>
 						</div>
 						<a href="images/work-4.jpg"
 							class="icon image-popup d-flex justify-content-center align-items-center">
@@ -236,8 +237,8 @@
 					<div class="project">
 						<img src="images/work-5.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
-							<span>Beauty</span>
-							<h3><a href="project.html">Makeup</a></h3>
+							<span>Organic</span>
+							<h3><a href="project.html">Coffee</a></h3>
 						</div>
 						<a href="images/work-5.jpg"
 							class="icon image-popup d-flex justify-content-center align-items-center">
@@ -247,10 +248,23 @@
 				</div>
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="project">
+						<img src="images/work-8.jpg" class="img-fluid" alt="Colorlib Template">
+						<div class="text">
+							<span>plucked</span>
+							<h3><a href="project.html">With Love</a></h3>
+						</div>
+						<a href="images/work-8.jpg"
+							class="icon image-popup d-flex justify-content-center align-items-center">
+							<span class="icon-expand"></span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="project">
 						<img src="images/work-6.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
-							<span>Fashion</span>
-							<h3><a href="project.html">Model</a></h3>
+							<span>Processing of</span>
+							<h3><a href="project.html">Pangalengan, West Java</a></h3>
 						</div>
 						<a href="images/work-6.jpg"
 							class="icon image-popup d-flex justify-content-center align-items-center">
@@ -262,8 +276,8 @@
 					<div class="project">
 						<img src="images/work-7.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
-							<span>Beauty</span>
-							<h3><a href="project.html">Makeup</a></h3>
+							<span>Java</span>
+							<h3><a href="project.html">Preanger</a></h3>
 						</div>
 						<a href="images/work-7.jpg"
 							class="icon image-popup d-flex justify-content-center align-items-center">
@@ -271,91 +285,9 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="project">
-						<img src="images/work-8.jpg" class="img-fluid" alt="Colorlib Template">
-						<div class="text">
-							<span>Beauty</span>
-							<h3><a href="project.html">Makeup</a></h3>
-						</div>
-						<a href="images/work-8.jpg"
-							class="icon image-popup d-flex justify-content-center align-items-center">
-							<span class="icon-expand"></span>
-						</a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
-
-	<section class="ftco-section ftco-booking bg-light">
-		<div class="container ftco-relative">
-			<div class="row justify-content-center pb-3">
-				<div class="col-md-10 heading-section text-center ftco-animate">
-					<span class="subheading">Booking</span>
-					<h2 class="mb-4">Make an Appointment</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-				</div>
-			</div>
-			<h3 class="vr">Call Us: 012-3456-7890</h3>
-			<div class="row justify-content-center">
-				<div class="col-md-10 ftco-animate">
-					<form action="#" class="appointment-form">
-						<div class="row">
-							<div class="col-sm-6">
-								<div class="form-group">
-									<input type="text" class="form-control" id="appointment_name" placeholder="Name">
-								</div>
-							</div>
-							<div class="col-sm-6">
-								<div class="form-group">
-									<input type="text" class="form-control" id="appointment_email" placeholder="Email">
-								</div>
-							</div>
-							<div class="col-sm-6">
-								<div class="form-group">
-									<input type="text" class="form-control appointment_date" placeholder="Date">
-								</div>
-							</div>
-							<div class="col-sm-6">
-								<div class="form-group">
-									<input type="text" class="form-control appointment_time" placeholder="Time">
-								</div>
-							</div>
-							<div class="col-sm-6">
-								<div class="form-group">
-									<div class="select-wrap">
-										<div class="icon"><span class="ion-ios-arrow-down"></span></div>
-										<select name="" id="" class="form-control">
-											<option value="">Professional Makeup</option>
-											<option value="">Manicure Pedicure</option>
-											<option value="">Body Treatment</option>
-											<option value="">Haircut &amp; Coloring</option>
-										</select>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-6">
-								<div class="form-group">
-									<input type="text" class="form-control" id="phone" placeholder="Phone">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<textarea name="" id="" cols="30" rows="7" class="form-control"
-										placeholder="Message"></textarea>
-								</div>
-							</div>
-						</div>
-						<div class="form-group">
-							<input type="submit" value="Make an Appointment" class="btn btn-primary">
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section>
-
 
 	<section class="ftco-section ftco-team">
 		<div class="container-fluid px-md-5">
@@ -409,7 +341,7 @@
 			</div>
 		</div>
 	</section>
-	
+
 	<section class="ftco-section ftco-pricing">
 		<div class="container">
 			<div class="row justify-content-center pb-3">
@@ -631,8 +563,10 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5 No. 10 <br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span></li>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+62 857 2275 4077</span></a></li>
+								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5 No. 10
+										<br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span></li>
+								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+62 857 2275
+											4077</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
 											class="text">info@paramarthaagro.com</span></a></li>
 							</ul>
@@ -644,7 +578,8 @@
 				<div class="col-md-12 text-center">
 
 					<p>
-						Copyright &copy; Paramartha <a href="www.instagram.com/paramarthagro/" target="blank" style="color: rgb(190, 145, 90);">Agro</a>
+						Copyright &copy; Paramartha <a href="www.instagram.com/paramarthagro/" target="blank"
+							style="color: rgb(190, 145, 90);">Agro</a>
 						<script>document.write(new Date().getFullYear());</script> <br> All rights reserved
 					</p>
 				</div>
