--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 						<span class="subheading">Welcome to Paramartha Agro</span>
 						<h1 class="mb-4">find your coconut charcoal briquettes <span
 								style="color: rgb(190, 145, 90);">&amp;</span> coffee here</h1>
-						<p><a href="#" class="btn btn-primary btn-outline-primary px-4 py-2">Our Products.</a></p>
+						<p><a href="services.html" class="btn btn-primary btn-outline-primary px-3 py-2">Our Products</a>     
+						<a href="contact.html" class="btn btn-primary btn-outline-primary px-3 py-2">Our Contacts</a></p>
 					</div>
 				</div>
 			</div>
@@ -132,35 +133,34 @@
 						<div class="icon"><span class="flaticon-healthy-lifestyle-logo"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Organic</h3>
-							<p>Processed organically and don't damage the environment.
-								Smokeless, Odorless, Sparkless.</p>
+							<p>Processed organically and don't damage the environment.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
 					<div class="media block-6 services d-block text-center">
-						<div class="icon"><span class="flaticon-beauty-products"></span></div>
+						<div class="icon"><span class="flaticon-box"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Packaging</h3>
-							<p>We provide various custom packing which is further negotiable. <br> (sacks, box etc.)</p>
+							<p>We provide various custom packing which is further negotiable.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
 					<div class="media block-6 services d-block text-center">
-						<div class="icon"><span class="flaticon-beauty-products"></span></div>
+						<div class="icon"><span class="flaticon-united"></span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3">Makeup</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<h3 class="heading mb-3">United</h3>
+							<p>We take care of our suppliers by setting the same quality and growing.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
 					<div class="media block-6 services d-block text-center">
-						<div class="icon"><span class="flaticon-healthy-lifestyle-logo"></span></div>
+						<div class="icon"><span class="flaticon-handshake"></span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3">Body Treatment</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<h3 class="heading mb-3">Business</h3>
+							<p>We always prioritize in our business all parties involved are WINNERS.</p>
 						</div>
 					</div>
 				</div>
