--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
 						<span class="subheading">Welcome to Paramartha Agro</span>
 						<h1 class="mb-4">find your coconut charcoal briquettes <span
 								style="color: rgb(190, 145, 90);">&amp;</span> coffee here</h1>
-						<p><a href="services.html" class="btn btn-primary btn-outline-primary px-3 py-2">Our Products</a>     
-						<a href="contact.html" class="btn btn-primary btn-outline-primary px-3 py-2">Our Contacts</a></p>
+						<p><a href="services.html" class="btn btn-primary btn-outline-primary px-3 py-2">Our
+								Products</a>
+							<a href="contact.html" class="btn btn-primary btn-outline-primary px-3 py-2">Our
+								Contacts</a>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -293,33 +296,25 @@
 		<div class="container-fluid px-md-5">
 			<div class="row justify-content-center pb-3">
 				<div class="col-md-10 heading-section text-center ftco-animate">
-					<span class="subheading">Artistic Director</span>
-					<h2 class="mb-4">Makeup Artist</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<h2 class="mb-4">Team</h2>
+					<span class="subheading">Look at our power</span>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 ftco-animate">
 					<div class="carousel-team owl-carousel">
 						<div class="item">
-							<a href="#" class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-1.jpg);"></div>
-								<h2>Danica Lewis</h2>
-								<span class="position">Hair Stylist</span>
-							</a>
-						</div>
-						<div class="item">
-							<a href="#" class="team text-center">
+							<a href="https://linkedin.com/in/mrfcreative" target="_blank" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
-								<h2>Nicole Simon</h2>
-								<span class="position">Nail Master</span>
+								<h2>Muhammad Rizal Fahmi</h2>
+								<span class="position">Director</span>
 							</a>
 						</div>
 						<div class="item">
 							<a href="#" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
-								<h2>Cloe Meyer</h2>
-								<span class="position">Director</span>
+								<h2>Nanda Amelia Listy</h2>
+								<span class="position">Public Relation</span>
 							</a>
 						</div>
 						<div class="item">
@@ -336,84 +331,6 @@
 								<span class="position">Barber</span>
 							</a>
 						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section ftco-pricing">
-		<div class="container">
-			<div class="row justify-content-center pb-3">
-				<div class="col-md-10 heading-section text-center ftco-animate">
-					<span class="subheading">Pricing</span>
-					<h2 class="mb-4">Our Prices</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3 ftco-animate">
-					<div class="pricing-entry pb-5 text-center">
-						<div>
-							<h3 class="mb-4">Hair Style</h3>
-							<p><span class="price">$50.00</span> <span class="per">/ session</span></p>
-						</div>
-						<ul>
-							<li>Hair Dryer</li>
-							<li>Hair Coloring</li>
-							<li>Hair Cut</li>
-							<li>Hair Dresser</li>
-							<li>Hair Spa</li>
-						</ul>
-						<p class="button text-center"><a href="#" class="btn btn-primary px-4 py-3">Get Offer</a></p>
-					</div>
-				</div>
-				<div class="col-md-3 ftco-animate">
-					<div class="pricing-entry pb-5 text-center">
-						<div>
-							<h3 class="mb-4">Manicure Pedicure</h3>
-							<p><span class="price">$34.50</span> <span class="per">/ session</span></p>
-						</div>
-						<ul>
-							<li>Manicure</li>
-							<li>Pedicure</li>
-							<li>Coloring</li>
-							<li>Nails</li>
-							<li>Nail Cut</li>
-						</ul>
-						<p class="button text-center"><a href="#" class="btn btn-primary px-4 py-3">Get Offer</a></p>
-					</div>
-				</div>
-				<div class="col-md-3 ftco-animate">
-					<div class="pricing-entry active pb-5 text-center">
-						<div>
-							<h3 class="mb-4">Makeup</h3>
-							<p><span class="price">$54.50</span> <span class="per">/ session</span></p>
-						</div>
-						<ul>
-							<li>Makeup</li>
-							<li>Professional Makeup</li>
-							<li>Blush On</li>
-							<li>Facial Massage</li>
-							<li>Facial Spa</li>
-						</ul>
-						<p class="button text-center"><a href="#" class="btn btn-primary px-4 py-3">Get Offer</a></p>
-					</div>
-				</div>
-				<div class="col-md-3 ftco-animate">
-					<div class="pricing-entry pb-5 text-center">
-						<div>
-							<h3 class="mb-4">Body Treatment</h3>
-							<p><span class="price">$89.50</span> <span class="per">/ session</span></p>
-						</div>
-						<ul>
-							<li>Massage</li>
-							<li>Spa</li>
-							<li>Foot Spa</li>
-							<li>Body Spa</li>
-							<li>Relaxing</li>
-						</ul>
-						<p class="button text-center"><a href="#" class="btn btn-primary px-4 py-3">Get Offer</a></p>
 					</div>
 				</div>
 			</div>
@@ -525,9 +442,13 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2 logo">Haircare</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.</p>
+						<a class="ftco-heading-2 logo" href="index.html">
+							<img src="images/logo2.png" alt="Homepage">
+						</a>
+						<p> <br> Paramartha Agro is a company that provides agro products that are processed organically and
+							have certificates with international standards. We take care of the quality and trust of our
+							consumers as well as our partners, because our principle is great business is if everyone
+							WIN!</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
