--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/joinchat.css">
+	<link rel="stylesheet" href="css/joinchat.min.css">
 
 	<link rel="shortcut icon" href="logo.png" type="image/x-icon">
 	<link rel="icon" href="logo.png" type="image/x-icon">
@@ -49,7 +51,6 @@
 					<li class="nav-item"><a href="services.html" class="nav-link">Product</a></li>
 					<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 				</ul>
 			</div>
@@ -445,14 +446,17 @@
 						<a class="ftco-heading-2 logo" href="index.html">
 							<img src="images/logo2.png" alt="Homepage">
 						</a>
-						<p> <br> Paramartha Agro is a company that provides agro products that are processed organically and
+						<p> <br> Paramartha Agro is a company that provides agro products that are processed organically
+							and
 							have certificates with international standards. We take care of the quality and trust of our
 							consumers as well as our partners, because our principle is great business is if everyone
 							WIN!</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+							<li class="ftco-animate"><a href="https://linkedin.com/company/Paramartha-Agro"
+									target="_blank"><span class="icon-linkedin"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://instagram.com/paramarthagro" target="_blank"><span
+										class="icon-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -470,12 +474,11 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Links</h2>
 						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block">Home</a></li>
-							<li><a href="#" class="py-2 d-block">About</a></li>
-							<li><a href="#" class="py-2 d-block">Services</a></li>
-							<li><a href="#" class="py-2 d-block">Work</a></li>
-							<li><a href="#" class="py-2 d-block">Blog</a></li>
-							<li><a href="#" class="py-2 d-block">Contact</a></li>
+							<li><a href="#" class="py-2 d-block smoothscroll">Home</a></li>
+							<li><a href="services.html" class="py-2 d-block">Product</a></li>
+							<li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
+							<li><a href="about.html" class="py-2 d-block">About</a></li>
+							<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -486,9 +489,12 @@
 							<ul>
 								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5 No. 10
 										<br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span></li>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+62 857 2275
+								<li><a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
+										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
+											2275
 											4077</span></a></li>
-								<li><a href="#"><span class="icon icon-envelope"></span><span
+								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
+											class="icon icon-envelope"></span><span
 											class="text">info@paramarthaagro.com</span></a></li>
 							</ul>
 						</div>
@@ -508,6 +514,14 @@
 		</div>
 	</footer>
 
+	<!-- Chat-->
+
+
+	<div class="joinchat joinchat--right joinchat--dark-auto"
+		data-settings='{"telephone":"6285722754077","mobile_only":false,"button_delay":1,"whatsapp_web":true,"message_views":2,"message_delay":5,"message_badge":false,"message_send":"Hi, Paramartha!","message_hash":"2bca28a0"}'>
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+		<div class="elfsight-app-c81d22a6-5ebc-428d-8327-5595d2113b34"></div>
+	</div>
 
 
 	<!-- loader -->
@@ -536,6 +550,8 @@
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 	<script src="js/google-map.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/joinchat.js"></script>
+	<script src="js/jquery.min.js"></script>
 
 </body>
 
