--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link">Product</a></li>
+					<li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+					<li class="nav-item"><a href="product.html" class="nav-link">Products</a></li>
 					<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -68,10 +68,8 @@
 						<span class="subheading">Welcome to Paramartha Agro</span>
 						<h1 class="mb-4">find your coconut charcoal briquettes <span
 								style="color: rgb(190, 145, 90);">&amp;</span> coffee here</h1>
-						<p><a href="services.html" class="btn btn-primary btn-outline-primary px-3 py-2">Our
-								Products</a>
-							<a href="contact.html" class="btn btn-primary btn-outline-primary px-3 py-2">Our
-								Contacts</a>
+						<p><a href="product.html" class="btn btn-primary btn-outline-primary px-3 py-2">Products</a>
+							<a href="contact.html" class="btn btn-primary btn-outline-primary px-3 py-2">Contacts</a>
 						</p>
 					</div>
 				</div>
@@ -88,7 +86,7 @@
 						style="background-image: url(images/formen.jpg);">
 						<div class="text">
 							<h3>Charcoal Briquettes</h3>
-							<p><a href="#" class="btn-custom">See details <span
+							<p><a href="product.html" class="btn-custom">See details <span
 										class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
@@ -114,7 +112,7 @@
 						style="background-image: url(images/forwomen.jpg);">
 						<div class="text">
 							<h3>Java Preanger Coffee</h3>
-							<p><a href="services.html" class="btn-custom">See details <span
+							<p><a href="product.html" class="btn-custom">See details <span
 										class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
@@ -307,29 +305,29 @@
 						<div class="item">
 							<a href="https://linkedin.com/in/mrfcreative" target="_blank" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
-								<h2>Muhammad Rizal Fahmi</h2>
+								<h2>Muhammad Rizal F.</h2>
 								<span class="position">Director</span>
 							</a>
 						</div>
 						<div class="item">
-							<a href="#" class="team text-center">
+							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
-								<h2>Nanda Amelia Listy</h2>
-								<span class="position">Public Relation</span>
+								<h2>Nanda Amelia L.</h2>
+								<span class="position">Marketing Manager</span>
 							</a>
 						</div>
 						<div class="item">
 							<a href="#" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-4.jpg);"></div>
 								<h2>Rachel Clinton</h2>
-								<span class="position">Hair Stylist</span>
+								<span class="position">Financial Manager</span>
 							</a>
 						</div>
 						<div class="item">
 							<a href="#" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
-								<h2>Dave Buff</h2>
-								<span class="position">Barber</span>
+								<h2>Muhammad Rizal F.</h2>
+								<span class="position">Public Relation</span>
 							</a>
 						</div>
 					</div>
@@ -454,7 +452,7 @@
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a href="https://linkedin.com/company/Paramartha-Agro"
 									target="_blank"><span class="icon-linkedin"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.facebook.com/Paramartha-Agro-106958891377926" target="_blank"><span class="icon-facebook"></span></a></li>
 							<li class="ftco-animate"><a href="https://instagram.com/paramarthagro" target="_blank"><span
 										class="icon-instagram"></span></a></li>
 						</ul>
@@ -464,9 +462,9 @@
 					<div class="ftco-footer-widget mb-4 ml-md-5">
 						<h2 class="ftco-heading-2">Information</h2>
 						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block">FAQs</a></li>
-							<li><a href="#" class="py-2 d-block">Privacy</a></li>
-							<li><a href="#" class="py-2 d-block">Terms Condition</a></li>
+							<li><a href="faq.html" class="py-2 d-block">FAQs</a></li>
+							<li><a href="privacy.html" class="py-2 d-block">Privacy</a></li>
+							<li><a href="termcondition.html" class="py-2 d-block">Terms Condition</a></li>
 						</ul>
 					</div>
 				</div>
@@ -475,7 +473,7 @@
 						<h2 class="ftco-heading-2">Links</h2>
 						<ul class="list-unstyled">
 							<li><a href="#" class="py-2 d-block smoothscroll">Home</a></li>
-							<li><a href="services.html" class="py-2 d-block">Product</a></li>
+							<li><a href="product.html" class="py-2 d-block">Products</a></li>
 							<li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
 							<li><a href="about.html" class="py-2 d-block">About</a></li>
 							<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
@@ -515,8 +513,6 @@
 	</footer>
 
 	<!-- Chat-->
-
-
 	<div class="joinchat joinchat--right joinchat--dark-auto"
 		data-settings='{"telephone":"6285722754077","mobile_only":false,"button_delay":1,"whatsapp_web":true,"message_views":2,"message_delay":5,"message_badge":false,"message_send":"Hi, Paramartha!","message_hash":"2bca28a0"}'>
 		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
@@ -529,7 +525,8 @@
 			<circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
 			<circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
 				stroke="#F96D00" />
-		</svg></div>
+		</svg>
+	</div>
 
 
 	<script src="js/jquery.min.js"></script>
