--- a/product.html
+++ b/product.html
@@ -65,9 +65,9 @@
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
         <div class="col-md-9 ftco-animate pb-5 text-center">
-          <h2 class="mb-0 bread">Our Products</h2>
-          <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscroll">Charcoal Briquettes</a></span> / <span><a href="#coffee" class="smoothscroll">Java Coffee Preanger</a><i
-                class="ion-ios-arrow-round-forward"></i></span></p>
+          <h2 class="mb-0 bread">Products</h2>
+          <p style="color: white; font-weight: bolder;">Made with love from <span style="color: rgb(255, 52, 52);">Indonesia</span></p>
+          <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscrolld">Coconut Charcoal Briquettes</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span></p>
         </div>
       </div>
     </div>
@@ -128,8 +128,7 @@
         <div class="row justify-content-center pb-3">
           <div class="col-md-10 heading-section text-center ftco-animate">
             <h2 class="mb-4">Catalogue</h2>
-            <span class="subheading">Made by love from Indonesia</span>
-            <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscroll">Charcoal Briquettes</a></span> / <span><a href="#coffee" class="smoothscroll">Java Coffee Preanger</a></span></p>
+            <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscrolldd">Coconut Charcoal Briquettes</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span></p>
           </div>
         </div>
         <div class="row">
@@ -717,7 +716,7 @@
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
               <li><a href="index.html" class="py-2 d-block">Home</a></li>
-              <li><a href="#" class="py-2 d-block smoothscroll">Products</a></li>
+              <li><a href="#" class="py-2 d-block smoothscrolld">Products</a></li>
               <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
               <li><a href="about.html" class="py-2 d-block">About</a></li>
               <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
